@@ -16,7 +16,6 @@
    Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA
 */
 
-#include <direct/memcpy.h>
 #include <display/idirectfbsurface.h>
 #include <media/idirectfbimageprovider.h>
 #define  STB_IMAGE_IMPLEMENTATION
