@@ -74,6 +74,14 @@ if enable_tiff
           install_dir: join_paths(moduledir, 'interfaces/IDirectFBImageProvider'))
 endif
 
+if enable_webp
+  library('idirectfbimageprovider_webp',
+          'idirectfbimageprovider_webp.c',
+          dependencies: [directfb_dep, webp_dep],
+          install: true,
+          install_dir: join_paths(moduledir, 'interfaces/IDirectFBImageProvider'))
+endif
+
 if enable_yuv
   library('idirectfbimageprovider_yuv',
           'idirectfbimageprovider_yuv.c',
