@@ -12,4 +12,5 @@ Initial version using the Meson build system and containing:
   - Schrift font provider
   - STB font provider and image provider
   - TIFF image provider
+  - WebP image provider
   - YUV image provider
